--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -25,7 +25,7 @@
         %li= link_to "FAQ", faq_path
       %li= link_to "Tutorials", "http://tutorials.codebar.io"
       - if current_page?(coaches_path)
-        %li.active= link_to "Our Coaches", coaches_path
+        %li.active= link_to "Coaches", coaches_path
       - else
         %li= link_to "Our Coaches", coaches_path
       - if current_page?(sponsoring_path)
