--- a/app/views/admin/groups/show.html.haml
+++ b/app/views/admin/groups/show.html.haml
@@ -4,23 +4,17 @@
       %h1
         = @group.name
         %small.subheader #{@group.chapter.name}
-  .row
-    .large-4.columns
-      %h3 Workshops
-      %ul.side-nav
-        - @group.chapter.workshops.each do |workshop|
-          %li
-            =link_to admin_workshop_path(workshop) do
-              %strong=workshop.chapter.name
-              %br
-              =humanize_date_with_time(workshop.date_and_time, workshop.time)
-
-    .large-4.columns
-      %h3 Members
-      %ul.side-nav
+    .large-12.columns
+      %h3 Members (#{@group.members.count})
+      %table
         - @group.members.each do |member|
-          %li
-            %strong=member.full_name
-            %br
-            = member.subscriptions.map(&:group).map { |g| "#{g.name} (#{g.chapter.name})" }.join(", ")
-
+          %tbody
+            %tr
+              %td
+                =image_tag member.avatar(32), class: 'th radius', title: member.full_name
+              %td
+                =member.full_name
+              %td
+                =mail_to member.email, member.email
+              %td
+                =member.mobile
