--- a/app/views/dashboard/wall_of_fame.html.haml
+++ b/app/views/dashboard/wall_of_fame.html.haml
@@ -1,4 +1,4 @@
-= render partial: 'shared/title', locals: { title: "Our coaches", date: nil }
+= render partial: 'shared/title', locals: { title: "Coaches", date: nil }
 %section#banner
   .row
     .large-12.columns
