--- a/app/views/admin/portal/index.html.haml
+++ b/app/views/admin/portal/index.html.haml
@@ -1,13 +1,13 @@
 %section#banner
   .row
     .large-4.columns
-      %h3 My chapters
+      %h3 Chapters
       %ul.side-nav
         - @chapters.each do |chapter|
           %li
             = link_to chapter.name, [ :admin, chapter ]
     .large-4.columns
-      %h3 Workshops
+      %h3 Upcoming Workshops
       %ul.side-nav
         - @workshops.each do |workshop|
           %li
@@ -15,14 +15,15 @@
               %strong=workshop.chapter.name
               %br
               =humanize_date_with_time(workshop.date_and_time, workshop.time)
-  %hr
+    %hr
   .row
     .large-4.columns
       %h3 Groups
       %ul.no-bullet
         - @groups.each do |group|
           %li
-            = link_to group.name, [:admin, group]
+            = link_to [:admin, group] do
+              #{group.name} (#{group.chapter.name})
     .large-4.columns
       %h3 Latest Subscribers
       %ul.side-nav
