update link name

--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -27,7 +27,7 @@
       - if current_page?(coaches_path)
         %li.active= link_to "Coaches", coaches_path
       - else
-        %li= link_to "Our Coaches", coaches_path
+        %li= link_to "Coaches", coaches_path
       - if current_page?(sponsoring_path)
         %li.active= link_to "Sponsoring", sponsoring_path
       - else
