--- a/app/views/members/_form.html.haml
+++ b/app/views/members/_form.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for @member do |f|
+= simple_form_for @member, method: :update do |f|
   .row
     .large-6.columns
       = f.input :name
