enforce :put on member update

--- a/app/views/members/_new.html.haml
+++ b/app/views/members/_new.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for @member do |f|
+= simple_form_for @member, method: :put do |f|
   .row
     .large-6.columns
       = f.input :name
