--- a/app/views/layouts/_aside.html.haml
+++ b/app/views/layouts/_aside.html.haml
@@ -4,12 +4,12 @@
       - if current_user.has_role?(:organiser, chapter)
         %li
           = link_to chapter.name, admin_chapter_path(chapter)
-    - if current_user.is_admin? or current_user.is_organiser? or current_user.has_role?(:organiser, Chapter)
+    - if current_user.is_admin?
       %li= link_to "Dashboard", admin_root_path
+      %li=link_to "Review jobs (#{jobs_pending_approval})", admin_jobs_path
+    - if has_permission?
       %li=link_to "New workshop", new_admin_workshop_path
       %li=link_to "New sponsor", new_admin_sponsor_path
-    - if current_user.is_admin?
-      %li=link_to "Review jobs (#{jobs_pending_approval})", admin_jobs_path
     %li= link_to "Jobs", jobs_path
     - if is_verified_coach_or_admin?
       %li=link_to "View Feedback", coach_feedback_index_path
