--- a/app/views/admin/workshops/_form.html.haml
+++ b/app/views/admin/workshops/_form.html.haml
@@ -1,7 +1,7 @@
 = simple_form_for [:admin, @workshop], url: :admin_workshops do |f|
   .row
     .large-12.columns
-      = f.association :chapter, as: :radio_buttons
+      = f.association :chapter, as: :radio_buttons, collection: Chapter.available_to_user(current_user)
 
       = f.input :date_and_time, as: :string, placeholder: Date.tomorrow.strftime('%d %b, %Y'), required: true
       = f.input :time, as: :string, placeholder: DateTime.new(2014,6,1,12,30).strftime("%H:%M %P"), required: true, input_html: { id: "sessions_time" }
