--- a/app/views/admin/portal/index.html.haml
+++ b/app/views/admin/portal/index.html.haml
@@ -29,7 +29,9 @@
       %ul.side-nav
         - @subscribers.each do |member|
           %li
-            #{member.full_name}, #{l(member.created_at, format: :log)}
+            = link_to admin_member_path(member) do
+              #{member.full_name}
+            signed up #{l(member.created_at, format: :log)}
     .large-4.columns
       %h3 Sponsors
       %ul.no-bullet
