--- a/app/views/admin/workshop/_attendances.html.haml
+++ b/app/views/admin/workshop/_attendances.html.haml
@@ -2,14 +2,12 @@
   .panel
     .row
       .large-8.columns
-        =invitation.member.full_name
-        %br
-        =mail_to invitation.member.email, invitation.member.email
+        =link_to admin_member_path(invitation.member) do
+          =invitation.member.full_name
         %p=invitation.note
       .large-4.columns
-        %p
-          - if invitation.attended.nil?
-            =link_to "Attended", admin_invitation_attended_path(invitation, attended: true), class: "button round expand tiny sucess"
-            =link_to "Not attending", admin_invitation_not_attending_path(invitation), class: "button round expand tiny alert", method: :post
-          - else
-            %i.fa.fa-check-circle.fa-2x.right
+        - if invitation.attended.nil?
+          =link_to "Attended", admin_invitation_attended_path(invitation, attended: true), class: "button round expand tiny sucess"
+          =link_to "Not attending", admin_invitation_not_attending_path(invitation), class: "button round expand tiny alert", method: :post
+        - else
+          %i.fa.fa-check-circle.fa-2x.right
