--- a/app/views/admin/sponsors/edit.html.haml
+++ b/app/views/admin/sponsors/edit.html.haml
@@ -18,6 +18,8 @@
             .row
               .large-3.columns
                 = f.input :seats, label: "Spots"
+              .large-3.columns
+                = f.input :number_of_coaches, label: "Coaches Spots"
           .large-6.columns
             .panel
               %strong Address
