--- a/app/views/admin/sponsors/new.html.haml
+++ b/app/views/admin/sponsors/new.html.haml
@@ -17,7 +17,9 @@
                 = f.input :website
             .row
               .large-3.columns
-                = f.input :seats, label: "Spots"
+                = f.input :seats, label: "Student Spots"
+              .large-3.columns
+                = f.input :number_of_coaches, label: "Coaches Spots"
           .large-6.columns
             .panel
               %strong Address
