--- a/app/views/dashboard/faq.html.haml
+++ b/app/views/dashboard/faq.html.haml
@@ -5,7 +5,7 @@
       %dl
         %dt Do I need to pay to attend Codebar?
         %dd
-          Absolutely not! We are lucky enough to have some great companies who are able to host the workshops and/or kindly provide food, and our #{link_to "awesome coaches", coaches_path} give their time freely to help the community.
+          Absolutely not! We are lucky enough to have some great companies who are able to host the workshops and/or kindly provide food. And our #{link_to "awesome coaches", coaches_path} give their time freely to help the community.
 
         %dt What technologies do you teach?
         %dd We have a variety of available tutorials in HTML, CSS, Javascript and Ruby. If you want to learn something else don't hesitate to #{mail_to "hello@codebar.io", "send us an email"} as we might still be able to find someone to help you out.
@@ -14,12 +14,12 @@
         %dd
           Our workshops are available to women, LGBTQ and people otherwise underrepresented in the tech industry. Don't worry if you don't fall under these groups, bring a friend who does and you can come along too.
           Alternatively, there some other great initiatives like <a href="http://www.meetup.com/opentechschool-london">Open Tech School London</a> where you can learn in a collaborative environment.
-        %dt Is Codebar only aimed at people who want to move into a career as developers?
-        %dd No! Codebar is about getting people excited about programming by teaching them some basic coding skills, as well as how to explore and do things on their own. For those who do want to become developers, we will provide help and guidance to help them achieve their goal.
+        %dt Is Codebar only aimed at people who want to move into a career as a developer?
+        %dd No! Codebar is about getting people excited about programming. We'll help them learn some basic coding skills, as well as how to explore and do things on their own. For those who do want to become developers, we will provide help and guidance to help them achieve their goal.
 
         %dt What is the format of the workshops?
         %dd
-          We try to have one coach for every two students. Students who want to work on the same tutorial are paired together, and are then assigned a coach. The rest just happens.
+          We try to have one coach for every two students. We will pair up students who want to work on the same tutorial, and assign them a coach. The rest just happens.
 
         %dt Do I need to bring a laptop with me at the workshops?
         %dd
@@ -31,7 +31,7 @@
 
         %dt I would like to coach at Codebar. Is there anything I should do besides signing up?
         %dd
-          Yes. First you should read our #{link_to "coaching guide", teaching_guide_path} and then spend sometime familiarising yourself with the <a href="http://tutorials.codebar.io">tutorials</a>. As the tutorials are open source, if there is something that you want to improve, please open an issue on the github repository or send a pull request.
+          Yes. First you should read our #{link_to "coaching guide", teaching_guide_path}. Then spend sometime familiarising yourself with the <a href="http://tutorials.codebar.io">tutorials</a>. The tutorials are open source so if there is something that you want to improve open an issue on the github repository or send a pull request.
 
           We don't expect the coaches to be familiar with all the technologies and languages we have material on.
         %dt Where do the workshops take place?
@@ -46,4 +46,4 @@
         %dd Of course. Codebar is about building a community of experienced developers that are able to give up some of their time to help others. If you are keen on running Codebar where you live, we would love to speak to you about it and see how we can help make this happen, so send <a href="mailto:contact@codebar.io">us an email</a>.
 
         %dt Our coaches
-        %dd You can see all the coaches have helped out in our workshops on the #{link_to "coaches page", coaches_path}. They are ordered by number of attendances. This is our way of showing our appreciation to them, as without them, we wouldn't be able to exist.
+        %dd You can see all the coaches have helped out in our workshops on the #{link_to "coaches page", coaches_path}. We've ordered them by number of attendances. This is our way of showing our appreciation to them, as without them, we wouldn't be able to exist.
