--- a/app/views/dashboard/code.html.haml
+++ b/app/views/dashboard/code.html.haml
@@ -11,13 +11,13 @@
         Harassment includes offensive verbal comments related to gender, sexual orientation, disability, physical appearance, body size, race, religion, sexual images in public spaces, deliberate intimidation, stalking, following, harassing photography or recording, sustained disruption of talks or other events, inappropriate physical contact, and unwelcome sexual attention.
 
       %p
-        Participants asked to stop any harassing behavior are expected to comply immediately.
+        We expect any participants asked to stop any harassing behavior to comply immediately.
 
       %p
         Sponsors are also subject to the anti-harassment policy. In particular, sponsors should not use sexualized images, activities, or other material. Staff (including volunteers) should not use sexualized clothing/uniforms/costumes, or otherwise create a sexualized environment.
 
       %p
-        If a participant engages in harassing behavior, the organizers may take any action they deem appropriate, including warning the offender or expulsion.
+        If a participant engages in harassing behavior the organisers may take any action they deem appropriate. This includes warning the offender or expulsion.
 
       %p
         If you are being harassed, notice that someone else is being harassed, or have any other concerns, please contact one of the organisers immediately.
