--- a/app/views/dashboard/faq.html.haml
+++ b/app/views/dashboard/faq.html.haml
@@ -31,7 +31,7 @@
 
         %dt I would like to coach at Codebar. Is there anything I should do besides signing up?
         %dd
-          Yes. First you should read our #{link_to "coaching guide", teaching_guide_path}. Then spend sometime familiarising yourself with the <a href="http://tutorials.codebar.io">tutorials</a>. The tutorials are open source so if there is something that you want to improve open an issue on the github repository or send a pull request.
+          Yes. First you should read our #{link_to "coaching guide", teaching_guide_path}. Then spend sometime familiarising yourself with the <a href="http://tutorials.codebar.io">tutorials</a>. The tutorials are open source so if there is something that you want to improve open an issue on the GitHub repository or send a pull request.
 
           We don't expect the coaches to be familiar with all the technologies and languages we have material on.
         %dt Where do the workshops take place?
