--- a/app/views/dashboard/faq.html.haml
+++ b/app/views/dashboard/faq.html.haml
@@ -46,4 +46,4 @@
         %dd Of course. Codebar is about building a community of experienced developers that are able to give up some of their time to help others. If you are keen on running Codebar where you live, we would love to speak to you about it and see how we can help make this happen, so send <a href="mailto:contact@codebar.io">us an email</a>.
 
         %dt Our coaches
-        %dd You can see all the coaches have helped out in our workshops on the #{link_to "coaches page", coaches_path}. We've ordered them by number of attendances. This is our way of showing our appreciation to them, as without them, we wouldn't be able to exist.
+        %dd You can see all the coaches have helped out in our workshops on the #{link_to "coaches page", coaches_path}. They are ordered by number of attendances. This is our way of showing our appreciation to them, as without them, we wouldn't be able to exist.
