--- a/app/views/invitation/show.csv.haml
+++ b/app/views/invitation/show.csv.haml
@@ -1,6 +1,6 @@
 - csv_string = CSV.generate do |csv|
   - @invitation.sessions.attending_students.each do |invitation|
-    - csv << [invitation.member.full_name, 'STUDENT ' + truncate(invitation.note, length: 100 ) ]
+    - csv << [invitation.member.full_name, 'STUDENT ']
   - @invitation.sessions.attending_coaches.each do |invitation|
     - csv << [ invitation.member.full_name, 'COACH' ]
 = raw csv_string
