add warning about invitation path being public - Fixes #113

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -59,7 +59,7 @@ $primary-color: #b299cc;
 // $secondary-color: #e7e7e7;
 // $alert-color: #f04124;
 // $success-color: #43AC6A;
-// $warning-color: #f08a24;
+$warning-color: #cb0432;
 // $info-color: #a0d3e8;
 
 // We use these to make sure border radius matches unless we want it different.
