--- a/app/views/layouts/_messages.html.haml
+++ b/app/views/layouts/_messages.html.haml
@@ -1,6 +1,7 @@
 - flash.each do |name, msg|
   - if msg.is_a?(String)
-    %div{ "data-alert" => '', :class => "alert-box info" }
+    - name = name.eql?("notice") ? "info" : name
+    %div{ "data-alert" => '', :class => "alert-box #{name}" }
       =link_to "#", class: 'close' do
         &times;
       = content_tag :div, msg.html_safe
