Add message about discourse

--- a/app/views/invitation/show.html.haml
+++ b/app/views/invitation/show.html.haml
@@ -38,6 +38,9 @@
                 = f.input :note, label: "I will be working on... ", placeholder: "e.g. I know a bit of HTML and CSS or the second JQuery tutorial", required: true
                 = f.button :submit, "Attend",  class: "button expand round"
                 %label *Letting us know what you plan to work on will help us manage things easier.
+      .panel.callout
+        Sign up to codebar's discussion forum at
+        =link_to "discuss.codebar.io", "http://discuss.codebar.io"
 
 
   .row
