--- a/app/views/admin/workshop/_attendances.html.haml
+++ b/app/views/admin/workshop/_attendances.html.haml
@@ -5,6 +5,8 @@
         =link_to admin_member_path(invitation.member) do
           =invitation.member.full_name
         %p=invitation.note
+        - if invitation.reminded_at.present?
+          %small  reminder emailed at #{l(invitation.reminded_at)}
       .large-4.columns
         - if invitation.attended.nil?
           =link_to "Attended", admin_invitation_attended_path(invitation, attended: true), class: "button round expand tiny sucess"
