--- a/app/views/dashboard/faq.html.haml
+++ b/app/views/dashboard/faq.html.haml
@@ -12,7 +12,7 @@
 
         %dt I want to attend a workshop. Do I qualify?
         %dd
-          Our workshops are available to women, LGBTQ and people otherwise underrepresented in the tech industry. Don't worry if you don't fall under these groups, bring a friend who does and you can come along too.
+          Our workshops are available to women, LGBTQ and people otherwise underrepresented in the tech industry.
           Alternatively, there some other great initiatives like <a href="http://www.meetup.com/opentechschool-london">Open Tech School London</a> where you can learn in a collaborative environment.
         %dt Is Codebar only aimed at people who want to move into a career as a developer?
         %dd No! Codebar is about getting people excited about programming. We'll help them learn some basic coding skills, as well as how to explore and do things on their own. For those who do want to become developers, we will provide help and guidance to help them achieve their goal.
