reword and add id

--- a/app/views/dashboard/faq.html.haml
+++ b/app/views/dashboard/faq.html.haml
@@ -10,10 +10,11 @@
         %dt What technologies do you teach?
         %dd We have a variety of available tutorials in HTML, CSS, Javascript and Ruby. If you want to learn something else don't hesitate to #{mail_to "hello@codebar.io", "send us an email"} as we might still be able to find someone to help you out.
 
-        %dt I want to attend a workshop. Do I qualify?
+        %dt#attendance-eligibility I want to attend a workshop. Am I eligible?
         %dd
-          Our workshops are available to women, LGBTQ and people otherwise underrepresented in the tech industry.
-          Alternatively, there some other great initiatives like <a href="http://www.meetup.com/opentechschool-london">Open Tech School London</a> where you can learn in a collaborative environment.
+          Our workshops are available to women, LGBTQ and people who are underrepresented in the tech industry. If you belong to one of these groups, you are more than welcome to attend.
+
+          If not, there are some other great initiatives like <a href="http://www.meetup.com/opentechschool-london">Open Tech School London</a> where you can learn in a collaborative environment.
         %dt Is Codebar only aimed at people who want to move into a career as a developer?
         %dd No! Codebar is about getting people excited about programming. We'll help them learn some basic coding skills, as well as how to explore and do things on their own. For those who do want to become developers, we will provide help and guidance to help them achieve their goal.
 
