Better validation for sponsor websites: use input type='url' on the sponsor form, and validate the format in the model.

--- a/app/views/admin/sponsors/edit.html.haml
+++ b/app/views/admin/sponsors/edit.html.haml
@@ -14,7 +14,7 @@
                 = f.hidden_field :image_cache
             .row
               .large-12.columns
-                = f.input :website
+                = f.input :website, as: :url
             .row
               .large-3.columns
                 = f.input :seats, label: "Spots"
