--- a/app/views/members/new.html.haml
+++ b/app/views/members/new.html.haml
@@ -2,8 +2,9 @@
 %section#banner
   .row
     .medium-12.columns
-      %p Before you continue, have a look at our #{link_to "code of conduct", code_of_conduct_path}. We offer a welcoming, inclusive and learning-friendly environment, and have a zero tolerance policy towards any form of harassment or inappropriate behavior.
-      %p Invitations are send out periodically, so don't worry if you don't receive one as soon as you register.
+      %p.lead We offer a welcoming, inclusive and learning-friendly environment, and have a zero tolerance policy towards any form of harassment or inappropriate behavior. Before you sign up, read our #{link_to "code of conduct", code_of_conduct_path}.
+      %p If you are a student, make sure you meet our #{link_to "eligibility criteria",  faq_path(anchor: "attendance-eligibility")} as our workshops are only available to women, LGBTQ and other minorities in tech.
+      %p Invitations are sent out periodically, so don't worry if you don't receive one as soon as you register.
       = link_to registration_path, class: "button round" do
         Sign in with Github
         %i.fa.fa-github.fa-fw
