restrict sponsor logo height

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -63,3 +63,13 @@ nav a.menu {
   background-color: #444444;
   padding-right: 10px;
 }
+
+#sponsors {
+  li img {
+    max-height: 120px;
+  }
+}
+
+img.sponsor {
+  max-height: 100px;
+}
