--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -19,7 +19,7 @@
           %p
             There are no upcoming workshops.
           %p
-            =link_to "View past events", events_url, class: "button round expand"
+            =link_to "View past events", events_url(anchor: 'past'), class: "button round expand"
 
         - if @upcoming_workshops.present?
           %ul.no-bullet
@@ -34,7 +34,7 @@
     %hr
     .large-12.columns
       %h4 Sponsors
-      %ul.small-block-grid-2.medium-block-grid-4.large-block-grid-5
+      %ul.small-block-grid-2.medium-block-grid-4.large-block-grid-5#sponsors
         - @sponsors.each do |sponsor|
           %li
             = link_to image_tag(sponsor.avatar, class: "sponsor-logo", alt: sponsor.name), sponsor.website
