--- a/app/views/events/_event.html.haml
+++ b/app/views/events/_event.html.haml
@@ -18,7 +18,7 @@
         = AddressDecorator.decorate(event.venue.address).to_html
     .large-3.medium-3.small-3.columns
       - event.sponsors.each do |sponsor|
-        = image_tag sponsor.avatar
+        = image_tag sponsor.avatar, class: 'sponsor'
       - if event.organisers.any?
         .organisers
           %small organisers
