--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -11,7 +11,7 @@
     .row
       .large-12.columns
         - if @past_events.any?
-          .past
+          .past#past
             .titlebox
               %h2 Past
             = render partial: 'events', locals: { events: @past_events }
