--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -4,12 +4,12 @@
 @import 'partials/chapter';
 
 section.title {
-  background-image: image-url('bg.JPG');
+  background-image: image-url('bg.jpg');
   background-position: 0 0px;
   background-size: 100% auto;
   background-repeat: no-repeat;
   margin-bottom: 10px;
-  padding: 100px 0;
+  padding: 120px 0;
 
   h1 {
     color: #e5e5e5;
