--- a/app/views/session_invitation_mailer/attending.html.haml
+++ b/app/views/session_invitation_mailer/attending.html.haml
@@ -24,7 +24,7 @@
           %table{ bgcolor: "#FFFFFF" }
             %tr
               %td.small{ width: "30%", style: "vertical-align: top; padding-right:10px;"}
-                =image_tag(@session.host.avatar)
+                =image_tag(@workshop.venue.avatar)
               %td
                 %h4
                   Workshop
@@ -40,8 +40,8 @@
             %tr
               %td
                 %p
-                  If you have any trouble finding the venue call
-                  - @session.chapter.organisers.each do |organiser|
+                  If you have any trouble finding the venue, give us a call
+                  - @workshop.organisers.each do |organiser|
                     - if organiser.mobile.present?
                       %p
                         = organiser.full_name
