--- a/app/views/session_invitation_mailer/notify_waiting_list.html.haml
+++ b/app/views/session_invitation_mailer/notify_waiting_list.html.haml
@@ -20,13 +20,13 @@
           %table{ bgcolor: "#FFFFFF" }
             %tr
               %td.small{ width: "30%", style: "vertical-align: top; padding-right:10px;"}
-                =image_tag(@session.host.avatar)
+                =image_tag(@workshop.venue.avatar)
               %td
                 %h4
                   Workshop
                   %small #{humanize_date_with_time(@session.date_and_time, @session.time)}
                 %p
-                  #{@session.host.name}
+                  #{@workshop.venue.name}
                   %br
                   #{@host_address.to_html}
                 = link_to "RSVP", full_url_for(invitation_url(@invitation)), class: 'btn'
@@ -37,7 +37,7 @@
               %td
                 %p
                   If you have any trouble finding the venue call
-                  - @session.chapter.organisers.each do |organiser|
+                  - @workshop.organisers.each do |organiser|
                     - if organiser.mobile.present?
                       %p
                         = organiser.full_name
