--- a/app/views/admin/portal/index.html.haml
+++ b/app/views/admin/portal/index.html.haml
@@ -15,26 +15,17 @@
               %strong=workshop.chapter.name
               %br
               =humanize_date_with_time(workshop.date_and_time, workshop.time)
+    .large-4.columns
+      =link_to "View all sponsors", admin_sponsors_path, class: "button expand round"
     %hr
   .row
-    .large-4.columns
+    .large-3.columns
       %h3 Groups
-      %ul.no-bullet
+      %ul.side-nav
         - @groups.each do |group|
           %li
             = link_to [:admin, group] do
               #{group.name} (#{group.chapter.name})
-    .large-4.columns
+    .large-9.columns
       %h3 Latest Subscribers
-      %ul.side-nav
-        - @subscribers.each do |member|
-          %li
-            = link_to admin_member_path(member) do
-              #{member.full_name}
-            signed up #{l(member.created_at, format: :log)}
-    .large-4.columns
-      %h3 Sponsors
-      %ul.no-bullet
-        - @sponsors.each do |sponsor|
-          %li
-            = link_to sponsor.name, [ :admin, sponsor ]
+      = render partial: 'admin/subscriptions/index', locals: { subscribers: @subscribers }
