--- a/app/views/events/_event.html.haml
+++ b/app/views/events/_event.html.haml
@@ -1,18 +1,20 @@
 %li.workshop
   .row
     .large-4.medium-4.small-4.columns
-      .date{ class: event.class_string }
-        .month
-          = event.month
-        .day
-          =l(event.date_and_time, format: :day)
-        .time
-          at #{event.time}
+      =link_to event.path do
+        .date{ class: event.class_string }
+          .month
+            = event.month
+          .day
+            =l(event.date_and_time, format: :day)
+          .time
+            at #{event.time}
     .large-5.medium-5.small-5.columns
       .title
         =link_to event.to_s, event.path
       %small= event.description
       - if event.venue.present?
+        Kindly hosted by
         = link_to event.venue.name, event.venue.website
         %br
         = AddressDecorator.decorate(event.venue.address).to_html
