--- a/app/views/invitation/show.html.haml
+++ b/app/views/invitation/show.html.haml
@@ -21,7 +21,7 @@
         - else
 
           - if @invitation.attending.eql?(true)
-            - if @invitation.role.eql?("Student")
+            - if @invitation.for_student?
               %p
                 You will be working on
                 %em= @invitation.note
@@ -32,8 +32,8 @@
             - else
               =link_to "I can no longer attend", reject_invitation_url(@invitation), class: "expand button round"
           - else
-            - if @invitation.role.eql?("Coach")
-              - if more_coaches_needed?(@invitation)
+            - if @invitation.for_coach?
+              - if @invitation.coach_spaces?
                 = link_to "Attend", accept_invitation_url(@invitation), class: "expand button round center"
               - else
                 = render partial: 'invitation/waiting_list', locals: { invitation: @invitation }
