--- a/app/views/admin/workshop/_attendances.html.haml
+++ b/app/views/admin/workshop/_attendances.html.haml
@@ -1,17 +1,23 @@
 - invitations.each do |invitation|
-  %ul.side-nav
-    %li.row
-      .medium-6.columns
-        =link_to admin_member_path(invitation.member) do
-          =invitation.member.full_name
-        %p=invitation.note
-        - if invitation.reminded_at.present?
-          %small  reminder emailed at #{l(invitation.reminded_at)}
-      - if invitation.attended.nil?
-        .medium-3.columns
-          =link_to "Attended", admin_invitation_attended_path(invitation, attended: true), class: "button round expand tiny sucess"
-        .medium-3.columns
-          =link_to "Not attending", admin_invitation_not_attending_path(invitation), class: "button round expand tiny alert", method: :post
-      - else
-        .medium-3.columns
-          =link_to "Attended", admin_invitation_attended_path(invitation, attended: true), class: "button round expand tiny sucess"
+  %ul.no-bullet
+    %li
+      .row
+        .small-8.medium-8.columns
+          =link_to admin_member_path(invitation.member) do
+            =invitation.member.full_name
+          %p
+            %small=invitation.note
+          - if invitation.reminded_at.present?
+            %span{ "data-tooltip" =>"", "aria-haspopup" => "true",  class: "has-tip",  title: "Email reminder." }
+              %small
+                %i.fa.fa-clock-o
+                =l(invitation.reminded_at)
+        - if invitation.attended.nil?
+          .medium-4.small-12.columns
+            =link_to "Attended", admin_invitation_attended_path(invitation, attended: true), class: "button round expand tiny sucess"
+            =link_to "Not attending", admin_invitation_not_attending_path(invitation), class: "button round expand tiny alert", method: :post
+        - else
+          .medium-3.columns
+            %i.fa.fa-check-circle.fa-2x.right
+
+      %hr
