--- a/app/views/job_mailer/job_approved.html.haml
+++ b/app/views/job_mailer/job_approved.html.haml
@@ -33,7 +33,7 @@
                             %h5 Connect with Us:
                             %p
                               %a{ href: "https://www.facebook.com/codebarHQ", class: 'soc-btn fb'} Like us on facebook
-                              %a{ href: "http://twitter.com/codebarHQ", class: "soc-btn tw" }Follow us on twitter
+                              %a{ href: "http://twitter.com/codebar", class: "soc-btn tw" }Follow us on twitter
                               %a{ href: "https://www.facebook.com/groups/codebarcommunity", class: 'soc-btn fb'} Join our facebook community
 
 
