--- a/app/views/shared/_social_media.html.haml
+++ b/app/views/shared/_social_media.html.haml
@@ -5,7 +5,7 @@
         %i.fa.fa-square.fa-stack-2x
         %i.fa.fa-github.fa-stack-1x.fa-inverse
   %li.twitter
-    =link_to  "https://twitter.com/codebarHQ" do
+    =link_to "https://twitter.com/codebar" do
       %span.fa-stack.fa-lg
         %i.fa.fa-square.fa-stack-2x
         %i.fa.fa-twitter.fa-stack-1x.fa-inverse
